# melinoe

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .opencommit  .pre-commit-config.yaml  AI_DISCLAIMER.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: hecate.md
.claude/commands/: create-agent.md  create-skill.md  create-soul.md
.github/: copilot-instructions.md
icarus/: main.py
melinoe/: __init__.py  bot.py  client.py  logger.py  settings.py  worker.py
melinoe/clients/: __init__.py  ai.py  meilisearch.py  redis.py  seaweedfs.py
melinoe/workflows/: base.py  bookworm.py  kardo_navalha.py  senhor_das_horas_mortas.py
melinoe/workflows/agents/: __init__.py  bookworm.md  kardo_navalha.md  senhor_das_horas_mortas.md
melinoe/workflows/memories/: professor_profile.md
melinoe/workflows/skills/: __init__.py  book_lookup.md  book_lookup.py  cover_analyzer.md  cover_analyzer.py  enrich_professor_profile.md  enrich_professor_profile.py  execute_web_mentions.md  execute_web_mentions.py  hecate.md  hecate.py  load_relevant_memory.md  load_relevant_memory.py  load_scraping_state.md  load_scraping_state.py  loader.py  plan_scraping.md  plan_scraping.py  professor_cataloger.md  professor_cataloger.py  professor_classifier.md  professor_classifier.py  professor_detector.md  professor_detector.py  save_scraping_state.md  save_scraping_state.py  title_page_analyzer.md  title_page_analyzer.py  write_memory.md  write_memory.py  write_professor_memory.md  write_professor_memory.py
melinoe/workflows/souls/: __init__.py  bibliophile.md  kardo_navalha.md  senhor_das_horas_mortas.md
scripts/: cover_analyzer.py  enrich_professor.py  remove_book.py
tests/icarus/: test_book.py  test_catalog_cover.py  test_catalog_web.py  test_enrich.py  test_remove_book.py  test_reset.py  test_scrape.py
