[project]
name = "melinoe"
version = "0.1.0"
description = "So mote it be."
authors = [
    { name = "Nilton Teixeira", email = "9078708+niltonfrederico@users.noreply.github.com" },
]
license = "The unliscense"
requires-python = ">=3.10,<3.14"
dependencies = ["litellm (>=1.83.13,<2.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
