[project]
name = "melinoe"
version = "0.1.0"
description = "So mote it be."
authors = [
    { name = "Nilton Teixeira", email = "9078708+niltonfrederico@users.noreply.github.com" },
]
license = "The unliscense"
requires-python = ">=3.13,<3.14"
dependencies = ["litellm (>=1.83.13,<2.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.12,<0.16.0)",
    "ty (>=0.0.32,<0.0.33)",
    "ipdb (>=0.13.13,<0.14.0)",
]
