[project]
name = "melinoe"
version = "0.1.0"
description = "So mote it be."
authors = [
    { name = "Nilton Teixeira", email = "9078708+niltonfrederico@users.noreply.github.com" },
]
license = "The unliscense"
requires-python = ">=3.13,<3.14"
dependencies = [
    "litellm (>=1.83.13,<2.0.0)",
    "httpx (>=0.27.0,<1.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.12,<0.16.0)",
    "ty (>=0.0.32,<0.0.33)",
    "ipdb (>=0.13.13,<0.14.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports (absolute imports enforcement)
    "RUF",  # ruff-specific rules
    "N",    # pep8-naming
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ty]
[tool.ty.environment]
python-version = "3.13"
